scripts/slurm-27473.out
  File "dnnt.py", line 65
    if pd.rank = 0:
               ^
SyntaxError: invalid syntax
  File "dnnt.py", line 65
    if pd.rank = 0:
               ^
SyntaxError: invalid syntax
  File "dnnt.py", line 65
    if pd.rank = 0:
               ^
SyntaxError: invalid syntax


###############################################################################
TCHPC Cluster: boyle
Job 27473 (dnnt03) for User 'bhatnags' in Account '(null)'
Finished at: Mon Aug 27 23:06:04 IST 2018

Job completion status:
======================

       JobID    JobName AllocCPUS NTasks NNodes     MaxRSS    MaxRSSNode  MaxDiskRead MaxDiskWrite    Elapsed      State ExitCode 
------------ ---------- --------- ------ ------ ---------- ------------- ------------ ------------ ---------- ---------- -------- 
27473            dnnt03        28             1                                                      00:00:01  COMPLETED      0:0 
27473.batch       batch        28      1      1          0    boyle-n022            0            0   00:00:01  COMPLETED      0:0 
27473.0      hydra_pmi+         1      1      1          0    boyle-n022            0            0   00:00:01  COMPLETED      0:0 


Job details:
============

JobId=27473 JobName=dnnt03
   UserId=bhatnags(1460) GroupId=bhatnags(1106) MCS_label=N/A
   Priority=101668 Nice=0 Account=(null) QOS=normal
   JobState=COMPLETING Reason=None Dependency=(null)
   Requeue=0 Restarts=0 BatchFlag=1 Reboot=0 ExitCode=0:0
   DerivedExitCode=0:0
   RunTime=00:00:01 TimeLimit=09:00:00 TimeMin=N/A
   SubmitTime=2018-08-27T20:44:28 EligibleTime=2018-08-27T20:44:28
   StartTime=2018-08-27T23:06:03 EndTime=2018-08-27T23:06:04 Deadline=N/A
   PreemptTime=None SuspendTime=None SecsPreSuspend=0
   Partition=compute AllocNode:Sid=boyle01:369
   ReqNodeList=(null) ExcNodeList=(null)
   NodeList=
   BatchHost=boyle-n022
   NumNodes=1 NumCPUs=28 NumTasks=3 CPUs/Task=1 ReqB:S:C:T=0:0:*:*
   TRES=cpu=28,mem=63000M,node=1
   Socks/Node=* NtasksPerN:B:S:C=0:0:*:* CoreSpec=*
     Nodes=boyle-n022 CPU_IDs=0-27 Mem=63000 GRES_IDX=
   MinCPUsNode=1 MinMemoryNode=63000M MinTmpDiskNode=0
   Features=LargeMem DelayBoot=00:00:00
   Gres=(null) Reservation=(null)
   OverSubscribe=NO Contiguous=0 Licenses=(null) Network=(null)
   Command=/home/users/mschpc/2017/bhatnags/testResults/final/Distri/dnnt03/bashscript.sh
   WorkDir=/home/users/mschpc/2017/bhatnags/testResults/final/Distri/dnnt03
   StdErr=/home/users/mschpc/2017/bhatnags/testResults/final/Distri/dnnt03/slurm-27473.out
   StdIn=/dev/null
   StdOut=/home/users/mschpc/2017/bhatnags/testResults/final/Distri/dnnt03/slurm-27473.out
   Power=


Acknowledgements:
=================

Note that usage of TCHPC Resources *must* be acknowledged in all publications.

Please see this page for details relevant to this cluster:

http://www.tchpc.tcd.ie/resources/acknowledgementpolicy

################################################################################
